src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Advanced_Technology__c</fullName>
        <label>Advanced Technology</label>
        <picklist>
            <picklistValues>
                <fullName>vPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Protection</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Application__c</fullName>
        <description>Formula field that displays the value in the Application field on the related Opportunity Application</description>
        <formula>Core_Opportunity_Application__r.Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Competitor_Architectures__c</fullName>
        <description>Architectures of competing products</description>
        <label>Competitor Architectures</label>
        <picklist>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPU/GPGPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Competitors__c</fullName>
        <description>The companies competing for a product on an Opportunity</description>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Micro Devices AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Micro Circuits Corporation AMCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freescale Semiconductor Inc. Freescale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell Semiconductor, Inc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Opportunity Application</description>
        <label>Opportunity Application</label>
        <referenceTo>Opportunity_Application__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <description>Status of the Opportunity Product (e.g., open, won, lost)</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Test Division 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Division 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Division 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Division 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Division 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Test Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Group 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Group 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Group 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Partner_Type__c</fullName>
        <label>Product Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cloud Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded Board Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESF Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow Traveler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV/OSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco/Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representative_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if you are selecting the family or series of the product, but are not sure of the exact product.</description>
        <label>Representative Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment__c</fullName>
        <label>Vertical Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Test Vertical Segment 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Vertical Segment 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Vertical Segment 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Vertical Segment 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Vertical Segment 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>Core_OppProd_Architectures_if_Won_Lost</fullName>
        <active>false</active>
        <description>Require the Competitor Architectures field have a value if the product status is Won or Lost</description>
        <errorConditionFormula>AND(OR(text(Core_Status__c) = &quot;Won&quot;, text(Core_Status__c) = &quot;Lost&quot;), ISBLANK(Core_Competitor_Architectures__c))</errorConditionFormula>
        <errorDisplayField>Core_Competitor_Architectures__c</errorDisplayField>
        <errorMessage>&quot;Competitor Architectures&quot; is required if the Status is &quot;Won&quot; or &quot;Lost&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_OppProd_Competitors_if_Won_Lost</fullName>
        <active>false</active>
        <description>Require the Competitors field have a value if the product status is Won or Lost</description>
        <errorConditionFormula>AND(OR(text(Core_Status__c) = &quot;Won&quot;, text(Core_Status__c) = &quot;Lost&quot;), ISBLANK( Core_Competitors__c ))</errorConditionFormula>
        <errorDisplayField>Core_Competitors__c</errorDisplayField>
        <errorMessage>&quot;Competitors&quot; is required if the Status is &quot;Won&quot; or &quot;Lost&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Division_Check</fullName>
        <active>false</active>
        <description>Checks to ensure the user has selected a valid Division</description>
        <errorConditionFormula>ISBLANK(VLOOKUP( $ObjectType.01Iq00000008aHk.Fields.Name, $ObjectType.01Iq00000008aHk.Fields.Name, 
(Product2.ProductCode &amp; &quot;DIV&quot; &amp; TEXT(Division__c))))</errorConditionFormula>
        <errorMessage>Incorrect DIV</errorMessage>
    </validationRules>
</CustomObject>